syntax = "proto3";

package at.fhj.swengb.apps.battleship;

option java_package         = "at.fhj.swengb.apps.battleship";
option java_outer_classname = "BattleShipProtobuf";


message BattleShipGame {

    enum VesselOrientation {
        Horizontal = 0;
        Vertical = 1;
    }

    message Position {
        int32 x = 1;
        int32 y = 2;
    }

    message ClickPos {
        Position clickedPos = 1;
        Player player= 2;
    }

    message Player {
        string name = 1;
        string cssStyleClass = 2;
    }

    message BattleField {
        Player player = 1;
        repeated Vessel vessels = 2;
    }

    message Vessel {
        string name = 1;
        int32 size = 2;
        VesselOrientation orientation = 3;
        Position startPos = 4;
    }

    string gameName = 1;
    int32 fieldWidth = 2;
    int32 fieldHeight = 3;
    repeated BattleField battlefields = 4;
    repeated ClickPos clickedPositions= 6; //Contains all clicks of game in a Tuple (Player,Position). Singleplyer: Only one...

}
